--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "tsc": "tsc -p ts",
     "tsc:w": "tsc -w -p ts",
     "prepublish": "tsc -p ts",
-    "pretest": "tslint ts/**.ts && tsc -p test/ts",
+    "pretest": "tslint ts/**.ts && tsc -p test/ts && tsc -p ts",
     "test": "istanbul test ./node_modules/.bin/_mocha test/js/**.js --  -R spec",
     "test-docker": "docker-compose run rabbit-queue npm run test --coverage",
     "posttest": "remap-istanbul -i coverage/coverage.json -o coverage/lcov-report -t html"
