--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "amqplib": "^0.4.2",
     "log4js": "^0.6.38",
-    "node-uuid": "^1.4.7"
+    "node-uuid": "^1.4.7",
+    "race-until": "^1.0.2"
   },
   "typings": "js/index",
   "devDependencies": {
