--- a/package.json
+++ b/package.json
@@ -29,16 +29,26 @@
     "amqplib": "^0.4.2",
     "log4js": "^0.6.38",
     "node-uuid": "^1.4.7",
-    "race-until": "^1.0.2"
+    "race-until": "^1.0.2",
+    "source-map-support": "^0.4.5"
   },
   "typings": "js/index",
   "devDependencies": {
+    "@types/amqplib": "^0.3.29",
+    "@types/log4js": "0.0.32",
+    "@types/mocha": "^2.2.32",
+    "@types/node": "^6.0.40",
+    "@types/node-uuid": "0.0.28",
+    "@types/should": "^8.1.30",
+    "@types/sinon": "^1.16.30",
+    "@types/source-map-support": "^0.2.28",
+    "@types/supertest": "^1.1.31",
     "istanbul": "^0.4.4",
     "mocha": "^3.0.2",
     "remap-istanbul": "^0.6.4",
     "should": "^10.0.0",
     "sinon": "^1.17.5",
     "tslint": "^3.14.0",
-    "typescript": "^1.8.10"
+    "typescript": "2.0.6"
   }
 }
