--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "preserveConstEnums": true,
     "declaration": true,
     "suppressImplicitAnyIndexErrors": true,
-    "outDir": "../js",
+    "outDir": "./js",
     "sourceMap": true
   },
   "filesGlob": [
