--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "tsc -p .",
     "watch": "tsc -w -p .",
-    "prepublish": "tsc -p ts",
+    "prepublish": "npm run build",
     "pretest": "tslint ts/**.ts && npm run build",
     "test": "istanbul test ./node_modules/.bin/_mocha js/test/**.js --  -R spec",
     "test-docker": "docker-compose run rabbit-queue npm run test --coverage",
