--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "amqplib": "^0.4.2",
     "log4js": "^0.6.38",
     "node-uuid": "^1.4.7",
-    "race-until": "^1.0.2",
-    "source-map-support": "^0.4.5"
+    "race-until": "^1.0.2"
   },
   "typings": "js/index",
   "devDependencies": {
+    "source-map-support": "^0.4.5",
     "@types/amqplib": "^0.3.29",
     "@types/log4js": "0.0.32",
     "@types/mocha": "^2.2.32",
