--- a/package.json
+++ b/package.json
@@ -34,22 +34,22 @@
   "typings": "js/index",
   "devDependencies": {
     "source-map-support": "^0.4.5",
-    "@types/uuid": "^2.0.29",
-    "@types/amqplib": "^0.3.29",
+    "@types/uuid": "2.0.29",
+    "@types/amqplib": "0.3.29",
     "@types/log4js": "0.0.32",
-    "@types/mocha": "^2.2.32",
-    "@types/node": "^6.0.40",
+    "@types/mocha": "2.2.32",
+    "@types/node": "6.0.40",
     "@types/node-uuid": "0.0.28",
-    "@types/should": "^8.1.30",
-    "@types/sinon": "^1.16.30",
-    "@types/source-map-support": "^0.2.28",
-    "@types/supertest": "^1.1.31",
-    "istanbul": "^0.4.4",
-    "mocha": "^3.0.2",
-    "remap-istanbul": "^0.6.4",
-    "should": "^10.0.0",
-    "sinon": "^1.17.5",
-    "tslint": "^4.1.0",
+    "@types/should": "8.1.30",
+    "@types/sinon": "1.16.30",
+    "@types/source-map-support": "0.2.28",
+    "@types/supertest": "1.1.31",
+    "istanbul": "0.4.4",
+    "mocha": "3.0.2",
+    "remap-istanbul": "0.6.4",
+    "should": "10.0.0",
+    "sinon": "1.17.5",
+    "tslint": "4.1.0",
     "typescript": "2.1.4"
   }
 }
