Add package-lock.json. Update dependencies.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "tsc -p .",
     "watch": "tsc -w -p .",
-    "prepublish": "npm run build && npm run test-docker",
+    "prepublishOnly": "npm run build && npm run test-docker",
     "pretest": "tslint ts/*.ts && npm run build",
     "test": "istanbul test ./node_modules/.bin/_mocha js/test/**.js --  -R spec",
     "test-docker": "docker-compose run rabbit-queue npm run test --coverage",
@@ -43,13 +43,13 @@
     "@types/should": "8.1.30",
     "@types/sinon": "1.16.30",
     "@types/source-map-support": "0.2.28",
-    "@types/supertest": "1.1.31",
+    "@types/supertest": "2.0.3",
     "istanbul": "0.4.4",
     "mocha": "3.0.2",
     "remap-istanbul": "0.6.4",
     "should": "10.0.0",
     "sinon": "1.17.5",
     "tslint": "4.1.0",
-    "typescript": "2.1.4"
+    "typescript": "2.5.2"
   }
 }
