--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "watch": "tsc -w -p .",
     "prepublishOnly": "npm run build && npm run test-docker",
     "pretest": "tslint ts/*.ts && npm run build",
-    "test": "istanbul test ./node_modules/.bin/_mocha js/test/**.js --  -R spec",
+    "test": "istanbul test ./node_modules/.bin/_mocha js/test/**.js --  -R spec --timeout 10000",
     "test-docker": "docker-compose run rabbit-queue npm run test --coverage",
     "posttest": "remap-istanbul -i coverage/coverage.json -o coverage/lcov-report -t html"
   },
@@ -26,8 +26,8 @@
     "node": ">=6.0.0"
   },
   "dependencies": {
+    "@log4js-node/log4js-api": "^1.0.0",
     "amqplib": "^0.5.1",
-    "log4js": "^1.1.1",
     "race-until": "^1.0.3",
     "uuid": "^3.0.1"
   },
