--- a/package.json
+++ b/package.json
@@ -32,24 +32,25 @@
     "uuid": "^3.0.1"
   },
   "typings": "js/index",
+  "peerDependencies": {
+    "log4js": "*"
+  },
   "devDependencies": {
     "source-map-support": "^0.4.5",
     "@types/uuid": "2.0.29",
     "@types/amqplib": "0.3.29",
-    "@types/log4js": "0.0.32",
     "@types/mocha": "2.2.32",
     "@types/node": "6.0.40",
     "@types/node-uuid": "0.0.28",
     "@types/should": "8.1.30",
     "@types/sinon": "1.16.30",
     "@types/source-map-support": "0.2.28",
-    "@types/supertest": "2.0.3",
     "istanbul": "0.4.4",
     "mocha": "3.0.2",
     "remap-istanbul": "0.6.4",
     "should": "10.0.0",
     "sinon": "1.17.5",
     "tslint": "4.1.0",
-    "typescript": "2.5.2"
+    "typescript": "2.8.3"
   }
 }
