--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "suppressImplicitAnyIndexErrors": true,
     "outDir": "./js",
     "sourceMap": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "lib": ["es6", "esnext.asynciterable"]
   },
   "filesGlob": ["./*.ts"]
 }
