--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -8,7 +8,7 @@
     "preserveConstEnums": true,
     "declaration": true,
     "suppressImplicitAnyIndexErrors": true,
-    "outDir": "./js",
+    "outDir": "../js",
     "sourceMap": true,
     "skipLibCheck": true,
     "lib": ["es6", "esnext.asynciterable"]
