--- a/package.json
+++ b/package.json
@@ -11,13 +11,37 @@
     "amqplib"
   ],
   "scripts": {
-    "build": "tsc -p .",
-    "watch": "tsc -w -p .",
+    "build": "tsc -p ts",
+    "watch": "tsc -w -p ts",
     "prepublishOnly": "npm run build && npm run test-docker",
-    "pretest": "tslint ts/*.ts && npm run build",
-    "test": "istanbul test ./node_modules/.bin/_mocha js/test/**.js -- -R spec --timeout 10000",
-    "test-docker": "docker-compose run rabbit-queue npm run test --coverage ",
-    "posttest": "remap-istanbul -i coverage/coverage.json -o coverage/lcov-report -t html"
+    "pretest": "tslint --project ./ts/ && tslint  ./test/**/*.ts && npm run build",
+    "test": "nyc mocha",
+    "test-docker": "docker-compose run rabbit-queue npm run test"
+  },
+  "lint-staged": {
+    "*.{ts,js}": [
+      "prettier --print-width 120 --single-quote true --write",
+      "git add"
+    ]
+  },
+  "nyc": {
+    "branches": 70,
+    "lines": 80,
+    "functions": 80,
+    "statements": 80,
+    "include": [
+      "ts/**/*.ts"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "reporter": [
+      "text-summary",
+      "html"
+    ],
+    "check-coverage": true,
+    "sourceMap": true,
+    "instrument": true
   },
   "repository": "Workable/rabbit-queue",
   "author": "Nikos Kostoulas <kostoulas@workable.com>",
@@ -27,7 +51,7 @@
   },
   "dependencies": {
     "@log4js-node/log4js-api": "^1.0.0",
-    "amqplib": "^0.5.1",
+    "amqplib": "^0.5.5",
     "race-until": "^2.2.0",
     "uuid": "^3.0.1"
   },
@@ -44,13 +68,16 @@
     "@types/sinon": "1.16.30",
     "@types/source-map-support": "0.2.28",
     "@types/uuid": "2.0.29",
-    "istanbul": "^0.4.5",
-    "mocha": "^5.2.0",
+    "husky": "^3.0.0",
+    "lint-staged": "^9.0.2",
+    "mocha": "^6.2.0",
+    "nyc": "^14.1.1",
     "remap-istanbul": "^0.11.1",
     "should": "10.0.0",
     "sinon": "1.17.5",
-    "source-map-support": "^0.4.5",
-    "tslint": "4.1.0",
+    "source-map-support": "^0.4.18",
+    "ts-node": "^8.3.0",
+    "tslint": "5.18.0",
     "typescript": "2.8.3"
   }
 }
