--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rabbit-queue",
-  "version": "4.1.2",
+  "version": "4.2.0-beta",
   "description": "AMQP/RabbitMQ queue management library.",
   "main": "js/index.js",
   "keywords": [
