Introduce a backpressure mechanism for getReply as stream (#15)
* Introduce a backpressure mechanism for getReply as stream

* Add prepare script

* fixup! Add prepare script

* Use correlationId

* Add timeout

* fixup! Add timeout

* 4.2.0-beta

* Make backpressure mechanism optional and test it

* Update Readme

* fixup! Update Readme

* Improve logging

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rabbit-queue",
-  "version": "4.1.2",
+  "version": "4.2.0-beta",
   "description": "AMQP/RabbitMQ queue management library.",
   "main": "js/index.js",
   "keywords": [
@@ -16,7 +16,8 @@
     "prepublishOnly": "npm run build && npm run test-docker",
     "pretest": "tslint --project ./ts/ && tslint  ./test/**/*.ts && npm run build",
     "test": "nyc mocha",
-    "test-docker": "docker-compose run rabbit-queue npm run test"
+    "test-docker": "docker-compose run rabbit-queue npm run test",
+    "prepare": "npm run build"
   },
   "lint-staged": {
     "*.{ts,js}": [
