--- a/package.json
+++ b/package.json
@@ -51,33 +51,28 @@
     "node": ">=10.0.0"
   },
   "dependencies": {
-    "@log4js-node/log4js-api": "^1.0.0",
     "amqplib": "^0.5.5",
     "race-until": "^2.2.0",
-    "uuid": "^3.0.1"
+    "uuid": "^7.0.0"
   },
   "typings": "js/index",
-  "peerDependencies": {
-    "log4js": "*"
-  },
   "devDependencies": {
-    "@types/amqplib": "0.3.29",
-    "@types/mocha": "2.2.32",
+    "@types/amqplib": "^0.5.13",
+    "@types/mocha": "^7.0.1",
     "@types/node": "12.6.8",
-    "@types/node-uuid": "0.0.28",
-    "@types/should": "13.0.0",
-    "@types/sinon": "1.16.30",
-    "@types/source-map-support": "0.2.28",
-    "@types/uuid": "2.0.29",
+    "@types/should": "^13.0.0",
+    "@types/sinon": "^7.5.1",
+    "@types/source-map-support": "^0.5.1",
+    "@types/uuid": "^3.4.7",
     "husky": "^3.0.0",
     "lint-staged": "^9.0.2",
-    "mocha": "^6.2.0",
-    "nyc": "^14.1.1",
-    "should": "13.2.3",
-    "sinon": "1.17.5",
-    "source-map-support": "^0.4.18",
-    "ts-node": "^8.3.0",
-    "tslint": "5.18.0",
-    "typescript": "3.5.3"
+    "mocha": "^7.0.1",
+    "nyc": "^15.0.0",
+    "should": "^13.2.3",
+    "sinon": "^9.0.0",
+    "source-map-support": "^0.5.16",
+    "ts-node": "^8.6.2",
+    "tslint": "^6.0.0",
+    "typescript": "^3.8.2"
   }
 }
