--- a/package.json
+++ b/package.json
@@ -51,28 +51,28 @@
     "node": ">=10.0.0"
   },
   "dependencies": {
-    "amqplib": "^0.5.5",
-    "race-until": "^2.2.0",
-    "uuid": "^7.0.0"
+    "amqplib": "~0.7.0",
+    "race-until": "~2.3.1",
+    "uuid": "~8.3.2"
   },
   "typings": "js/index",
   "devDependencies": {
-    "@types/amqplib": "^0.5.13",
-    "@types/mocha": "^7.0.1",
-    "@types/node": "12.6.8",
+    "@types/amqplib": "~0.5.17",
+    "@types/mocha": "~8.2.1",
+    "@types/node": "~14.14.31",
     "@types/should": "^13.0.0",
-    "@types/sinon": "^7.5.1",
-    "@types/source-map-support": "^0.5.1",
-    "@types/uuid": "^3.4.7",
-    "husky": "^3.0.0",
-    "lint-staged": "^9.0.2",
-    "mocha": "^7.0.1",
-    "nyc": "^15.0.0",
+    "@types/sinon": "~9.0.10",
+    "@types/source-map-support": "~0.5.3",
+    "@types/uuid": "~8.3.0",
+    "husky": "~5.1.3",
+    "lint-staged": "~10.5.4",
+    "mocha": "~8.3.0",
+    "nyc": "~15.1.0",
     "should": "^13.2.3",
-    "sinon": "^9.0.0",
-    "source-map-support": "^0.5.16",
-    "ts-node": "^8.6.2",
+    "sinon": "~9.2.4",
+    "source-map-support": "~0.5.19",
+    "ts-node": "~9.1.1",
     "tslint": "^6.0.0",
-    "typescript": "^3.8.2"
+    "typescript": "~4.2.2"
   }
 }
