--- a/package.json
+++ b/package.json
@@ -51,28 +51,28 @@
     "node": ">=10.0.0"
   },
   "dependencies": {
-    "amqplib": "~0.7.0",
+    "amqplib": "0.8.0",
     "race-until": "~2.3.1",
     "uuid": "~8.3.2"
   },
   "typings": "js/index",
   "devDependencies": {
-    "@types/amqplib": "~0.5.17",
-    "@types/mocha": "~8.2.1",
-    "@types/node": "~14.14.31",
+    "@types/amqplib": "0.8.1",
+    "@types/mocha": "~9.0.0",
+    "@types/node": "~16.4.1",
     "@types/should": "^13.0.0",
-    "@types/sinon": "~9.0.10",
-    "@types/source-map-support": "~0.5.3",
-    "@types/uuid": "~8.3.0",
-    "husky": "~5.1.3",
-    "lint-staged": "~10.5.4",
-    "mocha": "~8.3.0",
+    "@types/sinon": "~10.0.2",
+    "@types/source-map-support": "~0.5.4",
+    "@types/uuid": "~8.3.1",
+    "husky": "~7.0.1",
+    "lint-staged": "~11.1.0",
+    "mocha": "~9.0.2",
     "nyc": "~15.1.0",
     "should": "^13.2.3",
-    "sinon": "~9.2.4",
+    "sinon": "~11.1.1",
     "source-map-support": "~0.5.19",
-    "ts-node": "~9.1.1",
+    "ts-node": "~10.1.0",
     "tslint": "^6.0.0",
-    "typescript": "~4.2.2"
+    "typescript": "4.3.5"
   }
 }
