--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "node": ">=10.0.0"
   },
   "dependencies": {
-    "amqplib": "0.9.1",
+    "amqplib": "*",
     "race-until": "~2.3.1",
     "uuid": "~8.3.2"
   },
