--- a/package.json
+++ b/package.json
@@ -51,13 +51,13 @@
     "node": ">=10.0.0"
   },
   "dependencies": {
-    "amqplib": "*",
+    "amqplib": ">=0.10.0",
     "race-until": "~2.3.1",
     "uuid": "~8.3.2"
   },
   "typings": "js/index",
   "devDependencies": {
-    "@types/amqplib": "0.8.2",
+    "@types/amqplib": "^0.10.7",
     "@types/mocha": "~9.0.0",
     "@types/node": "~16.4.1",
     "@types/should": "^13.0.0",
@@ -68,6 +68,7 @@
     "lint-staged": "~11.1.0",
     "mocha": "~9.2.2",
     "nyc": "~15.1.0",
+    "prettier": "^3.5.3",
     "should": "^13.2.3",
     "sinon": "~11.1.1",
     "source-map-support": "~0.5.19",
