--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "amqplib": ">=0.10.0",
+    "lodash": "^4.17.23",
     "race-until": "~2.3.1",
     "uuid": "~8.3.2"
   },
@@ -66,7 +67,7 @@
     "@types/uuid": "~8.3.1",
     "husky": "~7.0.1",
     "lint-staged": "~11.1.0",
-    "mocha": "~9.2.2",
+    "mocha": "^11.7.5",
     "nyc": "~15.1.0",
     "prettier": "^3.5.3",
     "should": "^13.2.3",
